--- a/lib/etc/openturns.conf.in
+++ b/lib/etc/openturns.conf.in
@@ -72,7 +72,8 @@
   
   <!-- OT::PiecewiseHermiteEvaluation parameters -->
   <PiecewiseLinearEvaluation-EpsilonRegular value_float="1.0e-12" />
-  
+   <PiecewiseLinearEvaluation-DefaultEnableExtrapolation value_bool="true"/>
+    
   <!-- OT::UniVariatePolynomialImplementation parameters -->
   <UniVariatePolynomial-SmallDegree value_int="400" />
 
