--- a/lib/etc/openturns.conf.in
+++ b/lib/etc/openturns.conf.in
@@ -69,7 +69,8 @@
 
   <!-- OT::PiecewiseHermiteEvaluation parameters -->
   <PiecewiseHermiteEvaluation-EpsilonRegular value_float="1.0e-12" />
-  
+  <PiecewiseHermiteEvaluation-DefaultEnableExtrapolation value_bool="true"/>
+   
   <!-- OT::PiecewiseHermiteEvaluation parameters -->
   <PiecewiseLinearEvaluation-EpsilonRegular value_float="1.0e-12" />
   <PiecewiseLinearEvaluation-DefaultEnableExtrapolation value_bool="true"/>
