--- a/python/src/PiecewiseHermiteEvaluation_doc.i.in
+++ b/python/src/PiecewiseHermiteEvaluation_doc.i.in
@@ -9,7 +9,7 @@ values : 1-d or 2-d sequence of float
     Values at each location
 derivatives : 1-d or 2-d sequence of float
     Derivatives at each location
-enableExtrapolation : Bool, optional
+enableExtrapolation : boolean, optional
     Boolean that enables extrapolation of the model outside the design of experiments, default value is True.
 
 See also
