--- a/python/src/LinearModelAnalysis_doc.i.in
+++ b/python/src/LinearModelAnalysis_doc.i.in
@@ -15,7 +15,7 @@ Notes
 This class relies on a linear model result structure and analyses the results.
 
 By default, on graphs, labels of the 3 most significant points are displayed.
-This number can be changed by modifying the ResourceMap key
+This number can be changed by modifying the :class:`~openturns.ResourceMap` key
 (``LinearModelAnalysis-IdentifiersNumber``).
 
 The class has a pretty-print method which is triggered by
@@ -25,19 +25,24 @@ of a satisfactory regression model.
 
 - Each row of the table of coefficients tests if one single coefficient is zero.
   For a single coefficient, if the p-value of the T-test is close to zero,
-  we can reject the hypothesis that this coefficient is zero.
-- The R2 score measures how the predicted output values are close to the
+  we can reject the hypothesis that this coefficient is zero. See :meth:`getCoefficientsTScores`
+  to get the scores
+  and :meth:`getCoefficientsPValues` to get  the related p-values.
+- The :math:`R^2` score measures how the predicted output values are close to the
   observed values.
-  If the R2 is close to 1 (e.g. larger than 0.95), then the predictions are
-  accurate on average.
-  Furthermore, the adjusted R2 value takes into account the data set
-  size and the number of hyperparameters.
-- The F-test tests if all the coefficients are simultaneously zero.
+  If the :math:`R^2` is close to 1 (e.g. larger than 0.95), then the predictions are
+  accurate on average. See :meth:`~openturns.ResourceMap.getRSquared`.
+  Furthermore, the adjusted :math:`R^2` value, denoted by :math:`R_{ad}^2`, takes into account the data set
+  size and the number of hyperparameters. See :meth:`~openturns.ResourceMap.getAdjustedRSquared`.
+- The Fisher-test tests if all the coefficients are simultaneously zero.
   If the p-value is close to zero, then we can reject this hypothesis:
-  there is at least one nonzero coefficient.
-- The normality test checks that the residuals have a normal distribution.
+  there is at least one nonzero coefficient. See :meth:`getFisherScore` to get the scores
+  and :meth:`getFisherPValue` to get related the p-values.
+- The normality tests check if the residuals are Gaussian.
   The normality assumption can be accepted (or, more precisely, cannot be
-  rejected) if the p-value is larger than a threshold (e.g. 0.05).
+  rejected) if the p-value is larger than a threshold (e.g. 0.05). See 
+  :meth:`getNormalityTestCramerVonMises`, :meth:`getNormalityTestResultAndersonDarling`,
+  :meth:`getNormalityTestResultChiSquared()` and :meth:`getNormalityTestResultKolmogorovSmirnov`.
 
 The basics on regression theory are presented in :ref:`regression_analysis`.
 The goodness of fit tests for normality are presented in :ref:`graphical_fitting_test`, 
@@ -79,12 +84,14 @@ tScores : :class:`~openturns.Point`
 
 Notes
 -----
-For each coefficient estimate :math:`\hat{\vect{a}}`, the Student score :math:`T_k` is computed as: 
+The T-test checks if the coefficient :math`\hat{a}_k` is statistically different from zero and is used under the Gaussian assumption of the error :math:`\varepsilon`. See [rawlings2001]_ (section 4.5.2 *Special cases of the general form* page 122) for more details.
+
+For each coefficient estimate :math:`\hat{\vect{a}}`, the Student score :math:`t_k` is computed as: 
 
 .. math::
    :label: tScores
 
-   T_k = \dfrac{\hat{a}_k}{\sigma(a_k)}
+   t_k = \dfrac{\hat{a}_k}{\sigma(a_k)}
 
 where :math:`\sigma(a_k)` is the standard deviation of the distribution of the estimator :math:`\hat{a}_k`
 defined in :eq:`std_dev_estim`.
@@ -102,12 +109,16 @@ pValues : :class:`~openturns.Point`
 
 Notes
 -----
+The T-test checks if the coefficient :math`\hat{a}_k` is statistically different from zero  and is used under the Gaussian assumption of the error :math:`\varepsilon`.
+
 The p-values of each coefficient estimate is computed from the t-scores defined in :eq:`tScores` with
 respect to the :class:`~openturns.Student` distribution
 with :math:`dof` degrees of freedom defined in :eq:`dofWithBase` or :eq:`dofNoBase`.
 
-These p-values are used under the Gaussian assumption of the error :math:`\varepsilon`. They test
-if each coefficient is significantly different from zero. If the residuals are not Gaussian, this test is not appropriate and should not be used.
+These p-values are used under the Gaussian assumption of the error :math:`\varepsilon`. If the p-value is close to zero, we can
+reject the hypothesis that this coefficient is zero.
+
+If the residuals are not Gaussian, this test is not appropriate and should not be used.
 "
 // ---------------------------------------------------------------------
 
@@ -127,7 +138,7 @@ confidenceInterval : :class:`~openturns.Interval`
 
 Notes
 -----
-The confidence interval of the coefficient :math:`a_k` of level :math:`\alpha` is defined by:
+Under the Gaussian assumption of the error, the confidence interval of the coefficient :math:`a_k` of level :math:`\alpha` is defined by:
 
 .. math::
    \left[\hat{a}_k \pm \sqrt{\left((\mat{\Psi}^t\mat{\Psi})^{-1} \right)_{k+1, k+1}}\hat{\sigma} t_{(1+\alpha)/2}\right]
@@ -139,6 +150,8 @@ where:
 - :math:`\mat{\Psi}` the design matrix defined in :eq:`designMatDef` or :eq:`designMatDef2`.
 
 The interval returned is multivariate and contains the intervals of all the coefficients.
+
+If the residuals are not Gaussian, this test is not appropriate and should not be used.
 "
 
 // ---------------------------------------------------------------------
@@ -153,9 +166,9 @@ fisherScore : float
 
 Notes
 -----
-The Fisher score is computed as follows.
+The Fisher-test tests if all the coefficients are simultaneously equal to zero  and is used under the Gaussian assumption of the error :math:`\varepsilon`.
 
-Let be :math:`dofM` the degrees of freedom of the model, equal to the number of coefficients to estimate (:math:`p+1` of :math:`p'`). If the basis contains an intercept, then we subtract 1 from :math:`dofM`.
+The Fisher score is computed as follows. Let be :math:`dofM` the degrees of freedom of the model, equal to the number of coefficients to estimate (:math:`p+1` of :math:`p'`). If the basis contains an intercept, then we subtract 1 from :math:`dofM`.
 
 Let :math:`dof` be the degrees of freedom defined in :eq:`dofNoBase` or :eq:`dofWithBase`.
 
@@ -180,18 +193,18 @@ We denote by *SSM* the Sum of Squared Model defined by:
 .. math::
    SSM = SST - SSR
 
-Then, the Fisher score :math:`F` is defined by:
+Then, the Fisher score :math:`f` is defined by:
 
 .. math::
    :label: FisherScore
 
-   F = \dfrac{SSM/dofM}{SSE/dof}
+   f = \dfrac{SSM/dofM}{SSE/dof}
 "
 
 // ---------------------------------------------------------------------
 
 %feature("docstring") OT::LinearModelAnalysis::getFisherPValue
-"Accessor to the Fisher p value.
+"Accessor to the Fisher p-values.
 
 Returns
 -------
@@ -200,14 +213,18 @@ fisherPValue : float
 
 Notes
 -----
-The Fisher p-value is computed from the Fisher score defined in :eq:`FisherScore` with
+The F-test tests if all the coefficients are simultaneously equal to zero  and is used under the Gaussian assumption of the error :math:`\varepsilon`.
+
+The Fisher p-value of each coefficient estimate is computed from the Fisher score defined in :eq:`FisherScore` with
 respect to the :class:`~openturns.FisherSnedecor` distribution parameterized by :math:`(dofM, dof)` where:
 
 - :math:`dofM` is the degrees of freedom of the model (equal to the number of coefficients to estimate (:math:`p+1` of :math:`p'`). If the basis contains an intercept, then we subtract 1 from :math:`dofM`.
 - :math:`dof` is the degrees of freedom defined in :eq:`dofNoBase` or :eq:`dofWithBase`.
 
 This p-value is used under the Gaussian assumption of the error :math:`\varepsilon`. It tests
-if all the coefficients are statistically useful to the model. If the residuals are not Gaussian, this test is not appropriate and should not be used."
+if all the coefficients are statistically useful to the model. If the p-value is close to zero, then we can reject this hypothesis: *there is at least one nonzero coefficient*.
+
+If the residuals are not Gaussian, this test is not appropriate and should not be used." 
 
 // ---------------------------------------------------------------------
 
@@ -230,7 +247,6 @@ residuals variance.
 
 %feature("docstring") OT::LinearModelAnalysis::getNormalityTestResultChiSquared
 "Performs Chi-Square test.
-The statistical test checks the Gaussian assumption of the residuals.
 
 Returns
 -------
@@ -251,8 +267,6 @@ the :meth:`~openturns.FittingTest.ChiSquared` to check the normality.
 %feature("docstring") OT::LinearModelAnalysis::getNormalityTestResultKolmogorovSmirnov
 "Performs Kolmogorov test.
 
-Performs Kolmogorov test to check Gaussian assumption of the residuals.
-
 Returns
 -------
 testResult : :class:`~openturns.TestResult`
@@ -260,13 +274,12 @@ testResult : :class:`~openturns.TestResult`
 
 Notes
 -----
-We check that the residual is Gaussian thanks to :meth:`~openturns.FittingTest.Kolmogorov`."
+We check if the residuals are Gaussian  thanks to :meth:`~openturns.FittingTest.Kolmogorov`."
 
 // ---------------------------------------------------------------------
 
 %feature("docstring") OT::LinearModelAnalysis::getNormalityTestResultAndersonDarling
 "Performs Anderson-Darling test.
-The statistical test checks the Gaussian assumption of the residuals.
 
 Returns
 -------
@@ -276,15 +289,13 @@ testResult : :class:`~openturns.TestResult`
 
 Notes
 -----
-We check that the residual is Gaussian thanks to :meth:`~openturns.NormalityTest.AndersonDarlingNormal`."
+We check if the residuals are Gaussian  thanks to :meth:`~openturns.NormalityTest.AndersonDarlingNormal`."
 
 // ---------------------------------------------------------------------
 
 %feature("docstring") OT::LinearModelAnalysis::getNormalityTestCramerVonMises
 "Performs Cramer-Von Mises test.
 
-The statistical test checks the Gaussian assumption of the model (null hypothesis).
-
 Returns
 -------
 testResult : :class:`~openturns.TestResult`
@@ -293,7 +304,7 @@ testResult : :class:`~openturns.TestResult`
 
 Notes
 -----
-We check that the residual is Gaussian thanks to :meth:`~openturns.NormalityTest.CramerVonMisesNormal`."
+We check if the residuals are Gaussian thanks to :meth:`~openturns.NormalityTest.CramerVonMisesNormal`."
 
 // ---------------------------------------------------------------------
 
@@ -366,8 +377,7 @@ graph : :class:`~openturns.Graph`
 Notes
 -----
 The graph plots the Cook distance of each experience :math:`i` is defined in :eq:`cookDef`.
-The Cook's distance measures the impact of every individual data point on the linear regression.
-"
+The Cook's distance measures the impact of every individual data point on the linear regression. See [rawlings2001]_ (section 11.2.1, *Cook's D* page 362) for more details."
 
 // ---------------------------------------------------------------------
 
@@ -380,11 +390,7 @@ graph : :class:`~openturns.Graph`
 
 Notes
 -----
-This graph plots the residuals :math:`\varepsilon_i` defined in :eq:`residualDef` and the leverage :math:`\ell_i`  of experience :math:`i`, 
-defined as the distance between the point :math:`(\vect{X}^i, Y_i)`
-or :math:`(\vect{\phi}(\vect{X}^i), Y_i)` to the linear
-regression where :math:`\vect{\phi}(\vect{X}^i) = \Tr{(\phi_1(\vect{X}^i), \dots,  \phi_{p'}(\vect{X}^i))}`.
-"
+This graph plots the residuals :math:`\varepsilon_i` defined in :eq:`residualDef` and the leverage :math:`\ell_i`  of experience :math:`i` defined in :eq:`leverageDef`."
 
 // ---------------------------------------------------------------------
 
@@ -397,9 +403,5 @@ graph : :class:`~openturns.Graph`
 
 Notes
 -----
-This graph plots the Cook distance defined in :eq:`cookDef` and the the ration :math:`\ell_i/(1-\ell_i)` where :math:`\ell_i` is the leverage of experience :math:`i`, 
-defined as the distance between the point :math:`(\vect{X}^i, Y_i)`
-or :math:`(\vect{\phi}(\vect{X}^i), Y_i)` to the linear
-regression where :math:`\vect{\phi}(\vect{X}^i) = \Tr{(\phi_1(\vect{X}^i), \dots,  \phi_{p'}(\vect{X}^i))}`.
-"
+This graph plots the Cook distance defined in :eq:`cookDef` and the the ration :math:`\ell_i/(1-\ell_i)` where :math:`\ell_i` is the leverage of experience :math:`i` defined in :eq:`leverageDef`."
 
