--- a/python/src/LinearModelAnalysis_doc.i.in
+++ b/python/src/LinearModelAnalysis_doc.i.in
@@ -31,9 +31,9 @@ of a satisfactory regression model.
 - The :math:`R^2` score measures how the predicted output values are close to the
   observed values.
   If the :math:`R^2` is close to 1 (e.g. larger than 0.95), then the predictions are
-  accurate on average. See :meth:`~openturns.ResourceMap.getRSquared`.
+  accurate on average. See :meth:`~openturns.LinearModelAnalysis.getRSquared`.
   Furthermore, the adjusted :math:`R^2` value, denoted by :math:`R_{ad}^2`, takes into account the data set
-  size and the number of hyperparameters. See :meth:`~openturns.ResourceMap.getAdjustedRSquared`.
+  size and the number of hyperparameters. See :meth:`~openturns.LinearModelAnalysis.getAdjustedRSquared`.
 - The Fisher-test tests if all the coefficients are simultaneously zero.
   If the p-value is close to zero, then we can reject this hypothesis:
   there is at least one nonzero coefficient. See :meth:`getFisherScore` to get the scores
