--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -239,14 +239,14 @@ if (HDF5_FOUND)
 endif ()
 
 if (USE_BOOST)
-  find_package (Boost CONFIG 1.46)
+  find_package (Boost CONFIG 1.70)
   if (Boost_FOUND)
     message(STATUS "Found Boost: ${Boost_DIR} (found suitable version \"${Boost_VERSION}\")")
   endif ()
 
   # fallback to FindBoost before its deprecation
   if (CMAKE_VERSION VERSION_LESS 3.30 AND NOT Boost_FOUND)
-    find_package (Boost MODULE 1.46)
+    find_package (Boost MODULE 1.70)
   endif ()
 
   if (Boost_FOUND)
@@ -257,7 +257,7 @@ if (USE_BOOST)
     set (OPENTURNS_HAVE_BOOST TRUE)
     list (APPEND OPENTURNS_PRIVATE_LIBRARIES Boost::boost)
     list (APPEND OPENTURNS_ENABLED_FEATURES "boost")
-    if (USE_MPC AND NOT Boost_VERSION VERSION_LESS 1.68)
+    if (USE_MPC)
       find_package (MPC)
       if (MPC_FOUND)
         set (OPENTURNS_HAVE_MPC TRUE)
