CMake: Bump minimum version 3.18

--- a/python/src/CMakeLists.txt
+++ b/python/src/CMakeLists.txt
@@ -58,14 +58,9 @@ macro (ot_add_python_module MODULENAME SOURCEFILE)
 
   add_dependencies (${MODULENAME} generate_swig_runtime)
   target_include_directories (${MODULENAME} PRIVATE ${INTERNAL_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} BEFORE)
-  swig_link_libraries (${MODULENAME} OT)
 
-  if (TARGET Python::Module)
-    target_link_libraries (${MODULENAME} Python::Module)
-  else ()
-    target_include_directories (${MODULENAME} PRIVATE ${Python_INCLUDE_DIRS})
-    target_link_libraries_with_dynamic_lookup (${MODULENAME} ${Python_LIBRARIES})
-  endif ()
+  target_link_libraries (${MODULENAME} OT)
+  target_link_libraries (${MODULENAME} Python::Module)
 
   set_target_properties (${MODULENAME} PROPERTIES COMPILE_FLAGS "${SWIG_COMPILE_FLAGS}")
   set_target_properties (${MODULENAME} PROPERTIES UNITY_BUILD OFF)
@@ -1044,11 +1039,7 @@ set (OPENTURNS_PYTHON_MODULES ${OPENTURNS_PYTHON_MODULES} PARENT_SCOPE) # for th
 # Build and install openturns.memoryview
 add_library (memoryview MODULE PythonReadOnlyBuffer.c)
 target_include_directories (memoryview PRIVATE ${Python_INCLUDE_DIRS})
-if (TARGET Python::Module)
-  target_link_libraries (memoryview Python::Module)
-else ()
-  target_link_libraries_with_dynamic_lookup (memoryview ${Python_LIBRARIES})
-endif ()
+target_link_libraries (memoryview Python::Module)
 set_target_properties(memoryview PROPERTIES NO_SONAME ON PREFIX "")
 if (WIN32 AND NOT CYGWIN)
   set_target_properties(memoryview PROPERTIES SUFFIX ".pyd")
