--- a/python/src/DirectionalSampling_doc.i.in
+++ b/python/src/DirectionalSampling_doc.i.in
@@ -3,31 +3,24 @@
 
 Refer to :ref:`directional_simulation`.
 
-Available constructors:
-    DirectionalSampling(*event*)
-
-    DirectionalSampling(*event, rootStrategy, samplingStrategy*)
-
 Parameters
 ----------
 event : :class:`~openturns.RandomVector`
     Event we are computing the probability of.
-rootStrategy : :class:`~openturns.RootStrategy`
+rootStrategy : :class:`~openturns.RootStrategy`, optional
     Strategy used to evaluate the frontiers of
     the event along each direction in the standard space.
-
     By default :class:`~openturns.SafeAndSlow`.
-samplingStrategy : :class:`~openturns.SamplingStrategy`
+samplingStrategy : :class:`~openturns.SamplingStrategy`, optional
     Strategy used to sample directions in the standard space.
-
     By default :class:`~openturns.RandomDirection`.
 
 Notes
 -----
 Let :math:`\inputRV` be a random vector of dimension :math:`\inputDim`, distributed according to
 the measure :math:`\inputMeasure`, and :math:`\model: \Rset^\inputDim \rightarrow \Rset`
-be the *limit state function* (where we only wrote the random input parameters). We define the event
-:math:`\cD_f` by:
+be the *limit state function* (where we only wrote the random input parameters).
+We define the event :math:`\cD_f` by:
 
 .. math::
 
@@ -41,8 +34,9 @@ The directional sampling algorithm estimates the probability of the event :math:
         = \int_{\Rset^{\inputDim}} \mathbf{1}_{\{\model(\vect{x}) \leq 0 \}}\inputMeasure(\vect{x})\di{\vect{x}}
 
 
-The directional sampling algorithm is a variance reduction sampling method. As it is performed
-in the standard space, it uses the iso-probabilistic transformation associated to :math:`\inputMeasure` (see  :ref:`isoprobabilistic_transformation` to get more details).
+The directional sampling algorithm is a variance reduction sampling method.
+As it is performed in the standard space, it uses the iso-probabilistic transformation associated to :math:`\inputMeasure`
+(see :ref:`isoprobabilistic_transformation` to get more details).
 
 Let :math:`T` be the iso-probabilistic transformation: :math:`T(\vect{X}) = \vect{Z}`. The
 random vector :math:`\vect{Z}` follows a spherical distribution, which means that it is written
@@ -53,7 +47,7 @@ as:
     \vect{Z} = R \vect{U}
 
 where :math:`R` is a scalar random variable following the radial distribution, :math:`\vect{U}` is a random
-vector that follows the uniform distribution on the unit sphere of dimension :math:`\inputDim`, 
+vector that follows the uniform distribution on the unit sphere of dimension :math:`\inputDim`,
 denoted by :math:`\cS_\inputDim`, and :math:`(R, \vect{U})` are independent.
 
 Then the probability :math:`P_f` can be written as:
@@ -68,22 +62,21 @@ For a given direction :math:`\vect{u}`, let :math:`I_{\vect{u}}` be:
 
    I_{\vect{u}} = \{r \in \Rset^+ \, | \, \model \circ T^{-1}(r\vect{u})\leq 0 \}
 
-Then, we have: 
+Then, we have:
 
 .. math::
 
     \int_{\Rset^+} 1_{\left\{\model \circ T^{-1}(r\vect{u}) \leq 0\right\}} p_R(r) dr = \Prob{R \in I_{\vect{u}}}
-    
-As the radial distribution of :math:`R` is known, we can evaluate exactly  the probability :math:`\Prob{R \in I_{\vect{u}}}` as soon as we know the direction :math:`\vect{u}`.
 
-The integral with respect to the directions is evaluated using a sampling method, defined by the
-class:`~openturns.SamplingStrategy`.
+As the radial distribution of :math:`R` is known, we can evaluate exactly the probability :math:`\Prob{R \in I_{\vect{u}}}`
+as soon as we know the direction :math:`\vect{u}`.
+
+The integral with respect to the directions is evaluated using a sampling method, defined by the :class:`~openturns.SamplingStrategy`.
 
 The directional sampling algorithm follows the steps:
 
-- A sample is generated from the uniform distribution on 
-  :math:`\cS_\inputDim`: from this sample, some directions are defined, according to the
-  specified :class:`~openturns.SamplingStrategy`. We denote by :math:`(\vect{u}_i)` the sample of the directions;
+- A sample :math:`(\vect{u}_i)` is generated in the standard space and projected in the hyperplane normal to the important direction,
+  this point forms the origin of the line;
 
 - Along each direction :math:`i`, we find the frontiers of :math:`\cD_f`, i.e. the solutions
   of :math:`\model \circ T^{-1}(r\vect{u}_i) = 0` according to the :class:`~openturns.RootStrategy`.
