Mesh: Fix compilation with boost 1.75

--- a/lib/src/CMakeLists.txt
+++ b/lib/src/CMakeLists.txt
@@ -14,6 +14,7 @@ set_source_files_properties (Base/Func/SpecFunc/Faddeeva.cc PROPERTIES SKIP_UNIT
 if (Boost_FOUND)
   set_source_files_properties (Base/Func/SpecFunc/BetaFunctions.cxx PROPERTIES SKIP_UNITY_BUILD_INCLUSION ON)
   set_source_files_properties (Uncertainty/Distribution/StudentFunctions.cxx PROPERTIES SKIP_UNITY_BUILD_INCLUSION ON)
+  set_source_files_properties (Base/Geom/Mesh.cxx PROPERTIES SKIP_UNITY_BUILD_INCLUSION ON)
 endif ()
 
 # Exclude Ceres sources from unity build (templates take much memory)
