--- a/python/src/PiecewiseHermiteEvaluation_doc.i.in
+++ b/python/src/PiecewiseHermiteEvaluation_doc.i.in
@@ -18,6 +18,8 @@ Notes
 -----
 The evaluation returns constant values for data outside the bounds of the design of experiments.
 Thus, the approximation should not be used outside the range of the design of experiments.
+The possibility of extrapolation can be changed using :meth:`setEnableExtrapolation` (default value is *True*, see :class:`~openturns.ResourceMap`). 
+If this parameter is set to *False*, an error message is retrieved for evaluations outside the design of experiments.
 
 Examples
 --------
@@ -89,7 +91,7 @@ Parameters
 ----------
 derivatives : :class:`~openturns.Sample`
     Derivatives of the function at the locations."
-
+        
 // ---------------------------------------------------------------------
 
 %feature("docstring") OT::PiecewiseHermiteEvaluation::setLocationsValuesAndDerivatives
@@ -118,3 +120,23 @@ Returns
 -------
 derivative : :class:`~openturns.Point`
     The derivative of the function at the given point."
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OT::PiecewiseHermiteEvaluation::setEnableExtrapolation
+"Accessor to the parameters allowing extrapolation outside the design of experiments.
+
+Parameters
+----------
+enableExtrapolation : bool
+    Parameter for extrapolation."
+    
+// ---------------------------------------------------------------------
+
+%feature("docstring") OT::PiecewiseHermiteEvaluation::getEnableExtrapolation
+"Accessor to the parameters allowing extrapolation outside the design of experiments.
+
+Returns
+-------
+enableExtrapolation : bool
+    Parameter for extrapolation."
