--- a/python/src/PiecewiseLinearEvaluation_doc.i.in
+++ b/python/src/PiecewiseLinearEvaluation_doc.i.in
@@ -16,6 +16,8 @@ Notes
 -----
 The evaluation returns constant values for data outside the bounds of the design of experiments.
 Thus, the approximation should not be used outside the range of the design of experiments.
+The possibility of extrapolation can be changed using :meth:`setEnableExtrapolation` (default value is *True*, see :class:`~openturns.ResourceMap`). 
+If this parameter is set to *False*, an error message is retrieved for evaluations outside the design of experiments.
 
 Examples
 --------
@@ -78,3 +80,23 @@ locations : :class:`~openturns.Point`
     Locations.
 values : :class:`~openturns.Sample`
     Values of the function at the locations."
+
+// ---------------------------------------------------------------------
+
+%feature("docstring") OT::PiecewiseLinearEvaluation::setEnableExtrapolation
+"Accessor to the parameters allowing extrapolation outside the design of experiments.
+
+Parameters
+----------
+enableExtrapolation : bool
+    Parameter for extrapolation."
+    
+// ---------------------------------------------------------------------
+
+%feature("docstring") OT::PiecewiseLinearEvaluation::getEnableExtrapolation
+"Accessor to the parameters allowing extrapolation outside the design of experiments.
+
+Returns
+-------
+enableExtrapolation : bool
+    Parameter for extrapolation."
