--- a/python/test/CMakeLists.txt
+++ b/python/test/CMakeLists.txt
@@ -161,6 +161,7 @@ if (LIBXML2_FOUND AND DILL_FOUND)
 endif ()
 ot_pyinstallcheck_test (ParametricPointToFieldFunction_std)
 ot_pyinstallcheck_test (VertexValuePointToFieldFunction_std)
+ot_pyinstallcheck_test (VertexFieldToPointFunction_std IGNOREOUT)
 ot_pyinstallcheck_test (BoxCoxEvaluation_std)
 ot_pyinstallcheck_test (BoxCoxTransform_std)
 ot_pyinstallcheck_test (InverseBoxCoxEvaluation_std)
