--- a/python/src/SimulationAlgorithm_doc.i.in
+++ b/python/src/SimulationAlgorithm_doc.i.in
@@ -151,22 +151,7 @@ Can be used to programmatically stop a simulation.
 Parameters
 ----------
 callback : callable
-    Returns an int deciding whether to stop or continue.
-
-Examples
---------
-Stop a Monte Carlo simulation algorithm using a time limit
-
->>> import openturns as ot
->>> experiment = ot.MonteCarloExperiment()
->>> X = ot.RandomVector(ot.Normal())
->>> Y = ot.CompositeRandomVector(ot.SymbolicFunction(['X'], ['1.1*X']), X)
->>> event = ot.ThresholdEvent(Y, ot.Less(), -2.0)
->>> algo = ot.ProbabilitySimulationAlgorithm(event, experiment)
->>> algo.setMaximumOuterSampling(10000000)
->>> algo.setMaximumCoefficientOfVariation(-1.0)
->>> algo.setMaximumTimeDuration(0.1)
->>> algo.run()"
+    Returns an int deciding whether to stop or continue."
 
 // ---------------------------------------------------------------------
 
