--- a/python/src/PosteriorDistribution_doc.i.in
+++ b/python/src/PosteriorDistribution_doc.i.in
@@ -19,16 +19,40 @@ openturns.MetropolisHastings
 
 Notes
 -----
-Its probability density function is defined as:
+
+Let :math:`\inputRV` be a random vector such that :math:`\inputRV|\vect{\Theta}` follows the distribution
+:math:`\mathcal{L}_{\inputRV|\vect{\Theta}}`,
+with :math:`\vect{\Theta}=g(\vect{Y})` and :math:`\vect{Y}` following the prior distribution :math:`\mathcal{L}_{\vect{Y}}`. The function
+:math:`g` is the link function which input dimension
+is the dimension of :math:`\mathcal{L}_{\vect{Y}}` and which output dimension the dimension of :math:`\vect{\Theta}`.
+
+This class implements the posterior distribution of :math:`\vect{Y}` given that we have a sample :math:`(\vect{s}, \dots, \vect{s}_\sampleSize)` of
+:math:`\vect{X}`.
+
+This class requires the following features:
+
+- the :math:`\inputRV` may be continuous, discrete or neither: e.g., it can be a
+  :class:`~openturns.Mixture` of discrete and continuous distributions. In that case, its parameters set is the union of the
+  parameters set of each of its atoms (the weights of the mixture are not considered as parameters).
+- each component :math:`Y_i` is continuous or discrete: e.g., it can not be a :class:`~openturns.Mixture` of
+  discrete and continuous distributions, (the random vector :math:`\vect{Y}` may have some discrete components and some continuous components), 
+- the copula of :math:`\vect{Y}` is continuous: e.g., it can not be the :class:`~openturns.MinCopula`.
+
+If  :math:`\vect{Y}` and :math:`\vect{X}` are continuous random vector, then its PDF is defined by:
 
 .. math::
     :label: postPDF
 
-    f_{\vect{Y}|\vect{X}_1=\vect{x}_1, ..., \vect{X}_n = \vect{x}_n}(\vect{y}) = \frac{f_{\vect{Y}}(\vect{y})\prod_{i=1}^n f_{\vect{X}|\vect{\Theta}=\vect{y}}(\vect{x}_i)}{\int f_{\vect{Y}}(\vect{y}')\prod_{i=1}^n f_{\vect{X}|\vect{\Theta}=\vect{y}'}(\vect{x}_i) d \vect{y}'}
+    f_{\vect{Y}|\inputRV_1 = \vect{x}_1, \dots, \inputRV_\sampleSize =  \vect{x}_\sampleSize}(\vect{y}) = \frac{f_{\vect{Y}}(\vect{y})\prod_{i=1}^\sampleSize f_{\inputRV|\vect{\Theta}=\vect{y}}(\vect{x}_i)}{\int f_{\vect{Y}}(\vect{y})\prod_{i=1}^\sampleSize f_{\inputRV|\vect{\Theta}=\vect{y}'}(\vect{x}_i) d \vect{y}}
 
-with :math:`f_{\vect{X}|\vect{\Theta}}` the PDF of the conditioned distribution,
-:math:`f_{\vect{Y}}` the PDF of the conditioning distribution, i.e. the marginal distribution of :math:`\vect{Y}`,
+with :math:`f_{\inputRV|\vect{\Theta}}` the PDF of :math:`\inputRV|\vect{\Theta}`,
+:math:`f_{\vect{Y}}` the PDF of :math:`\vect{Y}` and
 :math:`\vect{x}_i` the observations of the deconditioned distribution.
+
+Note that the denominator  of :eq:`postPDF` is the PDF of the deconditioned distribution of :math:`\inputRV|\vect{\Theta}=g(\vect{Y})` with respect to the prior distribution of :math:`\vect{Y}`.
+
+In the other cases, the PDF is the probability distribution function for the discrete components and the :math:`\int` are replaced by some :math:`\Sum`.
+
 
 Examples
 --------
